# personal-shop-backend

./: .env  alembic.ini  common.py  dump.rdb  hello.py  main.py  pyproject.toml
alembic/versions/: 1f1e3926d770_first_migration.py  60365f2c223f_timezone_true_adfed.py
app/: database.py  models.py
app/api/: auth.py
backend/: common.py  main.py
backend/alembic/versions/: 8ef87c5dd499_added_unique_constraints.py  9672233eeacd_first_migration.py  bc741df266fd_adress_optional.py  c19a72883371_added_unique_constraints.py
backend/app/: models.py  schemas.py
bot/: main.py  pyproject.toml
bot/app/: __init__.py
bot/app/handlers/: lang.py  start.py
bot/app/keyboards/: inline.py  reply.py
bot/app/services/redis/: redis_db.py
bot/app/services/translations/: translations.json  translations.py
bot/app/states/: for_bot.py  sign_up.py
