[project]
name = "personal-shop-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram==3.15.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.4.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "securely>=0.2.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["bot"]
